examples/certbotnginx/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: certbotnginx-pod
  namespace: certbotnginx
  labels:
    app: certbotnginxlabel
spec:
  containers:
    - name: certbotnginx
      image: mohankrish3/nginxcertbot
      ports:
      - containerPort: 80
      volumeMounts:
        - name: resolvconf
          mountPath: "/tmp"
      command: ["/bin/bash", "-c"]
      args:
      - >
        nginx -g 'daemon off;' &&
        certbot --email mohankrish3@gmail.com --agree-tos --no-eff-email -d elasticsearch1.mohank.tk
  imagePullSecrets:
    - name: dockerconfig
  volumes:
    - name: resolvconf
      configMap:
        name: resolvconf-cm
        items:
        - key: "resolv.conf"
          path: "resolv.conf"
