examples/certbotnginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: certbotnginx-svc
  namespace: certbotnginx
spec:
  selector: 
    app: certbotnginxlabel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
